final desktop commit

--- a/index.html
+++ b/index.html
@@ -11,62 +11,82 @@
   <body>
 
     <div class="main">
-      <div class="header container">
-        <div class="logo">
-          <img src="resources/images/logo-white.png" alt="Glasses">
-          <span>Tortoiseshell Optics</span>
-        </div>
-        <div class="nav">
-          <span>Services</span>
-          <span>Products</span>
-          <span>Contact</span>
+      <div class="container">
+        <div class="header">
+          <div class="logo">
+            <img src="resources/images/logo-white.png" alt="Glasses">
+            <span>Tortoiseshell Optics</span>
+          </div>
+          <div class="nav">
+            <span>Services</span>
+            <span>Products</span>
+            <span>Contact</span>
+          </div>
         </div>
       </div>
-      <div class="banner container">
-        <div class="bannertext">
-            <h2>DON'T JUST LOOK, SEE.</h2>
+      <div class="banner">
+        <div class="container">
+          <div class="bannertext">
+              <h2>DON'T JUST LOOK, SEE.</h2>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="icons container">
       <div class="iconbox" id="paper">
-        <img src="resources/images/paper-icon.png" alt="Paper">
-        <span>Comprehensive<br>Exams</span>
+        <div class="icon">
+          <img src="resources/images/paper-icon.png" alt="Paper">
+        </div>
+        <div class="iconcaption">
+          <span>Comprehensive Exams</span>
+        </div>
       </div>
       <div class="iconbox" id="ruler">
-        <img src="resources/images/ruler-icon.png" alt="Paper">
-        <span>Custom<br>Fittings</span>
+        <div class="icon">
+          <img src="resources/images/ruler-icon.png" alt="Paper">
+        </div>
+        <div class="iconcaption">
+          <span>Custom Fittings</span>
+        </div>
       </div>
-      <div class="iconbox" id="paper">
-        <img src="resources/images/truck-icon.png" alt="Paper">
-        <span>Fast<br>Delivery</span>
+      <div class="iconbox" id="truck">
+        <div class="icon">
+          <img src="resources/images/truck-icon.png" alt="Paper">
+        </div>
+        <div class="iconcaption">
+          <span>Fast Delivery</span>
+        </div>
       </div>
     </div>
 
-    <div class="about container">
-      <div class="aboutbox" id="philosophy">
-        <div class="abouttext">
-          <span>PHILOSOPHY</span>
+    <div class="about">
+      <div class="container">
+        <div class="aboutbox" id="philosophy">
+          <div class="abouttext">
+            <span>PHILOSOPHY</span>
+          </div>
+          <p>Over 75% of our brains are dedicated to one sense:
+          vison. We believe everyone deserves to see the world,
+        no matter what. That's why we offer eye exams, custom fittings,
+      and quick delivery at a low cost. It's your vision that makes ours.</p>
         </div>
-        <p>Over 75% of our brains are dedicated to one sense:
-        vison. We believe everyone deserves to see the world,
-      no matter what. That's why we offer eye exams, custom fittings,
-    and quick delivery at a low cost. It's your vision that makes ours.</p>
-      </div>
-      <div class="aboutbox">
-        <div class="abouttext">
-          <span>APPOINTMENTS</span>
+        <div class="aboutbox" id="appointments">
+          <div class="abouttext">
+            <span>APPOINTMENTS</span>
+          </div>
+          <p>Schedule an appointment by calling us at (312) 654-0987.
+           We're open Tuesday - Saturday, 9AM - 6PM.</p>
         </div>
-        <p>Schedule an appointment by calling us at (312) 654-0987.
-         We're open Tuesday - Saturday, 9AM - 6PM.</p>
       </div>
     </div>
 
-    <div class="footer container">
-      <div class="logo">
-        <img src="resources/images/logo-black.png" alt="Glasses">
-        <span>Tortoiseshell Optics</span>
+    <div class="footer">
+      <div class="container">
+        <div class="logo">
+          <img src="resources/images/logo-black.png" alt="Glasses">
+          <span>Tortoiseshell Optics</span>
+        </div>
       </div>
     </div>
 
