final project commit

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
             <img src="resources/images/logo-white.png" alt="Glasses">
             <span>Tortoiseshell Optics</span>
           </div>
-          <div class="nav">
+          <div class="nav" id="desktopnav">
             <span>Services</span>
             <span>Products</span>
             <span>Contact</span>
+          </div>
+          <div class="nav" id="menubutton">
+            <span>Menu</span>
           </div>
         </div>
       </div>
@@ -83,7 +86,7 @@
 
     <div class="footer">
       <div class="container">
-        <div class="logo">
+        <div class="logo" id="footerlogo">
           <img src="resources/images/logo-black.png" alt="Glasses">
           <span>Tortoiseshell Optics</span>
         </div>
